--- a/oresbrtv.html
+++ b/oresbrtv.html
@@ -23,6 +23,13 @@ height:100px;
 background-color:#6F2232;
 }
 
+img{
+opacity:0.9;
+}
+
+img:hover{
+opacity:1.0;
+}
 
 #header{
 background:black;
@@ -68,11 +75,18 @@ text-align:center;
 padding:4px;
 }
 
-strong,i{
+b,i{
 text-align:center;
 color:#C2B9B0;
 font-family:Arial;
 font-size:50;
+}
+
+strong{
+text-align:center;
+color:#2E151B;
+font-family:Arial;
+font-size:100;
 }
 
 /*Navigation Bar*/
@@ -165,11 +179,27 @@ margin-left:0;
 	<div id="contentwrapper">
 		<div id="contentcolumn">
 			<div id="innertext">
-			<br><Strong></strong><br>
-			
-			
-
-
+			<strong>Our Partners for your Realestate dreams<br/></strong>
+			<a href="https://www.casagrand.co.in/">
+			<img src="casagrand.jpg" width="200" height="100" border="1" align="center">
+			</a>
+			<a href="https://www.commonfloor.com/shiradi-whitefield-mudra-phase-4-chennai/povp-hllmk5">
+			<img src="mudra.gif" width="200" height="100" border="1" align="center">
+			</a>
+			<a href="https://harmonyhomes.in/melody"><img src="melody.gif" width="130" height="100" border="1" align="center">
+			</a><br>
+			<a href="https://www.casagrand.co.in/apartments-villas-plots/ongoing-projects-chennai-ecr/">
+			<img src="offer.gif" width="200" height="270" border="1" align="center">
+			</a><img src="rentorsell.jpg" width="200" height="270" border="1" align="center">
+			<img src="casa.gif" width="130" height="270" border="1" align="center">
+			<a href="https://www.radiancerealty.in/projects/chennai/radiance-sapphire/">
+			<img src="radiance.gif" width="200" height="107" border="1" align="center">
+			</a>
+			<img src="pearl.gif" width="200" height="107" border="1" align="center">
+			<a href="https://vijayrajagroup.com/project-details/9/vrx-360">
+			<img src="vrx.gif" width="130" height="107" border="1" align="center">
+			</a>
+		
 			</div>
 		</div>
 	</div>
@@ -199,7 +229,7 @@ margin-left:0;
 			</div>
 		</div>
 
-<div id="footer">Thankyou</div>
+<div id="footer">c 2021 by BRTV.</div>
 
 </div>
 </body>
