--- a/oresbrtv.html
+++ b/oresbrtv.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 
 <head>
@@ -155,6 +153,14 @@ margin-left:0;
 
 }
 
+
+
+form {
+  border: 0px solid ;
+  padding:29px;
+}
+
+
 </style>
 </head>
 
@@ -173,60 +179,82 @@ margin-left:0;
 		
 		</ul>
 	</div>
-	
 	<div id="div1" style=""><font size="30" color="#E7717D" align="Center"><br/><b>BRTV Online Real Estate System</b>
 	<br></font><i>Dream, Plan your life with BRTV</i>
 	</div>
 
-	<div id="contentwrapper">
+	
+
+
+	
+
+	<div id="contentwrapper" align="center" style="background-color:#EDC7B7">
 		<div id="contentcolumn">
+			<div id="id01" class="modal">
+
+  
+<form class="modal-content animate" action="/action_page.php">
+    <div class="container">
+	<label for="uname"><Strong>Username</strong></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+	<br/>
+      <label for="psw"><Strong>Password</Strong></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+	<br/>
+	<label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    
+      <span class="psw"><a href="#">Forgot your password?</a></span>
+     
+    </div>
+
+    <div class="container" style="background-color:peach">
+  	<button type="submit">Login</button> 
+	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <button type="submit">Create New Account</button>
+    </div>
+    </form>
+	<div>
+		<br>
+		<img src="rentorsell.jpg" width="400" height="440" border="0" align="center">
+  		<br/><Strong>Thankyou and Visit Again!!!</strong>
+	</div>
+		
+			
+		</div>
+	</div>
+ </div>
+		<div id="leftcolumn">
+			<div class="innertext">
 			<div id="innertext">
-			<strong>Our Partners for your Realestate dreams<br/></strong>
 			<a href="https://www.casagrand.co.in/">
-			<img src="casagrand.jpg" width="200" height="100" border="1" align="center">
+			<img src="casagrand.jpg" width="200" height="100" border="1" align="left">
 			</a>
-			<a href="https://www.commonfloor.com/shiradi-whitefield-mudra-phase-4-chennai/povp-hllmk5">
-			<img src="mudra.gif" width="200" height="100" border="1" align="center">
-			</a>
-			<a href="https://harmonyhomes.in/melody"><img src="melody.gif" width="130" height="100" border="1" align="center">
+			
+			<a href="https://harmonyhomes.in/melody">
+			<img src="melody.gif" width="200" height="107" border="1" align="center">
 			</a><br>
 			<a href="https://www.casagrand.co.in/apartments-villas-plots/ongoing-projects-chennai-ecr/">
-			<img src="offer.gif" width="200" height="270" border="1" align="center">
-			</a><img src="rentorsell.jpg" width="200" height="270" border="1" align="center">
-			<img src="casa.gif" width="130" height="270" border="1" align="center">
+			<img src="offer.gif" width="200" height="280" border="1" align="center">
+			</a>
 			<a href="https://www.radiancerealty.in/projects/chennai/radiance-sapphire/">
 			<img src="radiance.gif" width="200" height="107" border="1" align="center">
 			</a>
-			<img src="pearl.gif" width="200" height="107" border="1" align="center">
-			<a href="https://vijayrajagroup.com/project-details/9/vrx-360">
-			<img src="vrx.gif" width="130" height="107" border="1" align="center">
-			</a>
-		
 			</div>
-		</div>
-	</div>
- 
-		<div id="leftcolumn">
-			<div class="innertext">
-			<b>Land</b><br>
-			<img src="land.jpg" align="center" width="200" height="200">
-			</div>			
-			
-			<div class="innertext">
-			<b>Houses</b><br/>
-			<img src="house.jpg" align="center" width="200" height="200">
-			
 			</div>
 		</div>
  
 		<div id="rightcolumn">
 			<div class="innertext">
-			<b>Buildings</b><br>
-			<img src="building.jpg" align="center" width="200" height="200">
-			<br></div>
-			<div class="innertext">
-			<b>Luxury Livings</b>
-			<img src="luxury.jpg" align="center" width="200" height="200">
+			<img src="casa.gif" width="200" height="273" border="1" align="center">
+			<a href="https://www.commonfloor.com/shiradi-whitefield-mudra-phase-4-chennai/povp-hllmk5">
+			<img src="mudra.gif" width="200" height="107" border="1" align="center">
+			</a>
+			<img src="pearl.gif" width="200" height="107" border="1" align="center">
+			<a href="https://vijayrajagroup.com/project-details/9/vrx-360">
+			<img src="vrx.gif" width="200" height="107" border="1" align="center">
+			</a>
 			
 			</div>
 		</div>
