--- a/brtvbuy.html
+++ b/brtvbuy.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <head>
@@ -102,7 +103,8 @@ background-color:#0099ff;
 	<div id="header">
 		
 		<ul style="display:inline;">
-			<img src="brtv.jpg" width="100" height="70" align="left">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnn_UWydrMKIN2YyRABse1gXtvW9Z-__drog&usqp=CAU  
+" width="100" height="70" align="left">
 			<li><a href="oresbrtv.html">Home</a></li>
 			<li><a class="active">Buy</a></li>
 			<li><a href="brtvrent.html">Rent</a></li>
@@ -121,28 +123,28 @@ background-color:#0099ff;
 			<div id="innertext">
 			<strong>Looking for the best land/houses/buildings/luxury livings to buy........here are our wide range of options.They are available in an economic friendly attractive price.</strong>
 			<br/><br/><b>Land</b><br>
-			<img src="landforsale.jpg" align="center" width="500" height="400">
+			<img src="https://lh3.googleusercontent.com/proxy/YZNjNAZY5DeICuPM2paKW5l9Oehtamwt95pX3y-DonMXDFkG5-g-UUgozbYPR79mYiE41MMfQiIsblpOVWQ4UQpU-KGhUID5y6ZqzMUytCn9mH0FlsDBepv9y7aI" align="center" width="500" height="400">
 			<br/>
 
 			</div></div><br/>
 		<div id="contentcolumn">
 			<div id="innertext">
 			<br><b>Houses</b><br>
-			<img src="house.jpg" align="center" width="400" height="500">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcZNd-GNet43QW2_hni0xSoG-kQzi74JNMNmW6vfdgU1vOWSAtPwdLSXnizImvI5GfoCc&usqp=CAU" align="center" width="400" height="500">
 			<br/>
 
 			</div></div><br/>
 		<div id="contentcolumn">
 			<div id="innertext">
 			<b>Buildings</b><br/>
-			<img src="building.jpg" align="center" width="500" height="600">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVJpkw9WIBgm5cg-U8ilj8rTmEE7diHj9JIg&usqp=CAU" align="center" width="500" height="600">
 			<br/>
 
 			</div></div><br/>
 		<div id="contentcolumn">
 			<div id="innertext">
-			<b>Luxury Living</b>
-			<img src="luxury.jpg" align="center" width="600" height="400">
+			<b>Luxury Living</b><br>
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGx1zLlSWzTD852o6bxZQyj9ewvSJfRjh0mQ&usqp=CAU" align="center" width="600" height="400">
 
 			</div></div>
 		</div>
