--- a/brtvlease.html
+++ b/brtvlease.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 
 <head>
-<title>BRTV Rent</title>
+<title>BRTV Lease</title>
 <meta charset="utf-8">
 <style> 
 
@@ -122,8 +121,8 @@ background-color:#0099ff;
 " width="100" height="70" align="left">
 			<li><a href="oresbrtv.html">Home</a></li>
 			<li><a href="brtvbuy.html">Buy</a></li>
-			<li><a class="active">Rent</a></li>
-			<li><a href="brtvlease.html">Lease</a></li>
+			<li><a class="brtvrent">Rent</a></li>
+			<li><a href="active">Lease</a></li>
 			<li><a href="brtvsell.html">Sell</a></li>
 		
 		</ul>
@@ -158,7 +157,7 @@ background-color:#0099ff;
 			</div></div><br/>
 		<div id="contentcolumn">
 			<div id="innertext">
-			<b>Luxury Living</b><br>
+			<b>Luxury Living</b>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGx1zLlSWzTD852o6bxZQyj9ewvSJfRjh0mQ&usqp=CAU" align="center" width="600" height="400">
 
 			</div></div>
